gap+opacity fix. loader, a title under a category circle

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -111,24 +111,29 @@ main {
 .cards-wrapper .card1 {
   transform: translateX(-20vw);
   transition: transform .5s;
+  opacity: 0.5;
 }
 
 .cards-wrapper .card3 {
   transform: translateX(20vw);
   transition: transform .5s;
+  opacity: 0.5;
 }
 
 
 .cards-wrapper .card2 {
   transform: scale(1.3);
   transition: transform .5s;
-  opacity: 1
+  z-index: 999;
 }
 
 .cards-wrapper .card2 .card:hover {
   box-shadow: none;
   cursor: default
 
+}
+
+.cards-wrapper .bg {
 }
 
 .card-inner {
@@ -140,27 +145,25 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  opacity: .6;
+  gap: 20px;
   width: 20vw;
   height: 470px
 }
 
 .card-inner .card {
   background-color: #fff;
-  width: 70%;
-  height: 90%;
+  width: 280px;
+  height: 680px;
+  padding: 10px 20px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.card-inner .half-height {
-  height: 40%
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .cards-inner {
-  grid-template-rows: 1fr 1fr
+  grid-template-rows: 1fr 1fr;
 }
 
 .card {
@@ -280,12 +283,20 @@ footer .buttons-inner .circle-button {
   .buttons-inner {
     margin-bottom: 50px
   }
+
+  .card-inner .card {
+    width: 200px;
+    height: 360px;
+  }
+  .card-inner {
+    height: 450px;
+  }
 }
 
 .styled-input-single {
   color: black;
   position: relative;
-  padding: 20px 0 20px 40px;
+  padding: 10px 0 10px 30px;
   text-align: left;
   font-size: 10pt;
 
@@ -302,20 +313,21 @@ footer .buttons-inner .circle-button {
 
     &:before {
       left: 0;
-      width: 30px;
-      height: 30px;
-      margin: -16px -1px 0;
-      border: 1px solid #898989;
-      box-shadow: 0 0 1px grey;
+      width: 15px;
+      height: 15px;
+      margin: -8px -2px 0;
+      background-color: #fff;
+      border: 1px solid #fff;
+      box-shadow: 0 0 1px #fff;
     }
 
     &:after {
-      left: 5px;
-      width: 20px;
-      height: 20px;
-      margin: -10px 0 0;
+      left: 2px;
+      width: 9px;
+      height: 9px;
+      margin: -4px 0 0;
       opacity: 0;
-      background: #898989;
+      background: #125374;
       transform: translate3d(-40px, 0, 0) scale(0.5);
       transition: opacity 0.25s ease-in-out, transform 0.25s ease-in-out;
     }
